Add authentication Add database config Add passportjs config Add layout template Add index, sign up, login views Add navbar partial view Add navbar styling

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,7 +1,11 @@
-<div>
+<div class="navbar">
   <a href="/">Members Only</a>
-  <div>
+  <div class="nav-links">
+    <% if (locals.user) {%>
+    <a href="/log-out">Log Out</a>
+    <% } else { %>
     <a href="/sign-up">Sign Up</a>
-    <a href="/login">Login</a>
+    <a href="/log-in">Login</a>
+    <% } %>
   </div>
 </div>
