--- a/views/sign-up-form.ejs
+++ b/views/sign-up-form.ejs
@@ -1,11 +1,24 @@
 <h1>Sign Up</h1>
-<form action="/sign-up" method="POST">
-    <label for="username">Username</label>
-    <input id="username" name="username" placeholder="username" type="text" />
 
-    <label for="password">Password</label>
-    <input id="password" name="password" type="password" />
-    
-    <button type="submit">Sign Up</button>
-  </form>
+<% if (errors.length > 0) { %>
+<ul>
+  <% errors.forEach((error) => { %>
+  <li><%= error.msg %></li>
+  <% }) %>
+</ul>
+<% } %>
+
+<form action="/sign-up" method="POST">
+  <label for="username">Username</label>
+  <input
+    id="username"
+    name="username"
+    placeholder="username"
+    type="text"
+    value="<%= data?.username || '' %>" />
+
+  <label for="password">Password</label>
+  <input id="password" name="password" type="password" />
+
+  <button type="submit">Sign Up</button>
 </form>
